@@ -1,0 +1,16 @@
+[Desktop Entry]
+Encoding=UTF-8
+_Name=Theme Installer
+_Comment=Installs themes packages for various parts of the desktop
+Exec=gnome-theme-manager -i %u
+Icon=gnome-settings-theme
+Terminal=false
+Type=Application
+MimeType=application/x-gnome-theme-package;
+StartupNotify=true
+Categories=GNOME;GTK;
+OnlyShowIn=GNOME;
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=control-center
+X-GNOME-Bugzilla-Component=theme-manager
+X-GNOME-Bugzilla-Version=@VERSION@
