@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<mime-info xmlns="http://www.freedesktop.org/standards/shared-mime-info">
+   <mime-type type="application/x-gnome-theme-package">
+     <sub-class-of type="application/x-compressed-tar"/>
+     <_comment>Gnome Theme Package</_comment>
+     <glob pattern="*.gtp"/>
+   </mime-type>
+</mime-info>
+
