@@ -609,6 +609,19 @@ dnl =======================================
 dnl End: Variables for config_archiverConf.sh.in
 dnl =======================================
 
+dnl =======================================
+dnl Update Mime Database
+dnl =======================================
+
+AC_PATH_PROG(UPDATE_MIME_DATABASE, update-mime-database, no)
+
+AC_ARG_ENABLE(update-mimedb,
+   AC_HELP_STRING([--disable-update-mimedb],
+                   [disable the update-mime-database after install [default=no]]),,
+    enable_update_mimedb=yes)
+AM_CONDITIONAL(ENABLE_UPDATE_MIMEDB, test x$enable_update_mimedb = xyes)
+
+
 AC_CONFIG_FILES([
 Makefile
 po/Makefile.in
@@ -658,6 +671,7 @@ capplets/display/display-properties.desktop.in
 capplets/mouse/gnome-settings-mouse.desktop.in
 capplets/sound/gnome-settings-sound.desktop.in
 capplets/theme-switcher/gtk-theme-selector.desktop.in
+capplets/theme-switcher/gnome-theme-installer.desktop.in
 capplets/default-applications/default-applications.desktop.in
 capplets/accessibility/at-properties/at-properties.desktop.in
 capplets/accessibility/keyboard/accessibility-keyboard.desktop.in
