@@ -60,6 +60,8 @@ capplets/theme-switcher/gnome-theme-installer.c
 capplets/theme-switcher/gnome-theme-manager.c
 capplets/theme-switcher/gnome-theme-save.c
 capplets/theme-switcher/gtk-theme-selector.desktop.in.in
+capplets/theme-switcher/gnome-theme-installer.desktop.in.in
+capplets/theme-switcher/gnome-theme-package.xml.in
 capplets/theme-switcher/theme-properties.glade
 capplets/ui-properties/gnome-ui-properties.c
 capplets/ui-properties/gnome-ui-properties.desktop.in.in
